2006-05-08  Jack Morgenstein  <jackm@mellanox.co.il>

	* src/mthca.c: Add include files needed for open() if
	HAVE_IBV_READ_SYSFS_FILE is not defined (so libmthca includes a
	private local definition of ibv_read_sysfs_file()).

2006-04-11  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.c (ibv_driver_init, openib_driver_init): Add new
	forward-compatible driver entry point.  Make old entry point a
	simple wrapper for the new one.

2006-03-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.1.

	* Makefile.am (EXTRA_DIST): Remove debian/ directory from
	tarballs, since Debian policy is that upstream tarballs should not
	include it.

2006-03-13  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0.

2006-02-27  Dotan Barak  <dotanb@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_send, mthca_arbel_post_send): Add
	support for IBV_SEND_FENCE flag.

2006-02-16  Roland Dreier  <rdreier@cisco.com>

	* src/memfree.c (mthca_alloc_db): Introduce a temporary variable
	to pass to posix_memalign() to avoid "warning: dereferencing
	type-punned pointer will break strict-aliasing rules."

	* Release version 1.0-rc7.

2006-02-15  Roland Dreier  <rdreier@cisco.com>

	* src/verbs.c (mthca_create_qp): Update to add new response and
	response size parameters for libibverbs ibv_cmd_create_qp().

2006-02-14  Roland Dreier  <rdreier@cisco.com>

	* Release version 1.0-rc6.

2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>

	* src/verbs.c (mthca_query_qp, mthca_query_srq): Add query QP and
	query SRQ verbs.

2006-01-31  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h: Remove useless "extern" from function declarations.

2006-01-30  Michael S. Tsirkin  <mst@mellanox.co.il>

	* src/qp.c (mthca_tavor_post_recv, mthca_arbel_post_recv): Pass
	recv_cq to wq_overflow() so we lock the correct CQ.  Noticed by
	Yossi Leybovich.

2006-01-26  Roland Dreier  <rdreier@cisco.com>

	* src/mthca.h, src/verbs.c, src/cq.c, src/mthca.c: Add
	implementation of resize CQ operation.
